--- a/home.html
+++ b/home.html
@@ -1,3 +1,53 @@
-<div id="rasa-chat-widget" data-websocket-url="http://localhost:5005/"></div>
-<script src="https://unpkg.com/@rasahq/rasa-chat" type="application/javascript"></script>
-
+<html>
+    <body>
+        <div id="webchat">
+        </div>
+        <script src="https://cdn.jsdelivr.net/npm/rasa-webchat/lib/index.min.js"></script>
+        <link rel="stylesheet" type="text/css" href="https://">
+         <script>!(function () {
+           let e = document.createElement("script"),
+             t = document.head || document.getElementsByTagName("head")[0];
+            (e.src =
+             "https://cdn.jsdelivr.net/npm/rasa-webchat@1.0.1/lib/index.js"),
+              (e.async = !0),
+              (e.onload = () => {
+                window.WebChat.default(
+                 { 
+                    selector: "#webchat",
+                   initPayload: "/get_started",
+             customData: {"language": "en"}, // arbitrary custom data. Stay minimal as this will be added to  the socket
+              socketUrl: "http://localhost:5005",
+              socketPath: "/socket.io/",
+              title: "Rasa Bot",
+              tooltipPayload: "/get_started",
+              tooltip: true,    
+              tooltipDelay: 500,
+              subtitle: "Powered by XYZ",
+              connectingText: "Waiting for server...",
+              profileAvatar: "https://",
+              openLauncherImage: "https://",
+       
+              params: {"storage": "session"}, 
+         
+             mainColor: "#ffd600",
+             userBackgroundColor: "#ffd600",
+             userTextColor: "#cde9ce",
+             showMessageDate: false,
+             inputTextFieldHint: "Hi.Type your message here...",
+             badge: " ",
+             displayUnreadCount: true,
+             isChatOpen: false,
+             embedded: false,
+             showCloseButton: true,
+             fullScreenMode: true,
+             showFullScreenButton: true,
+             docViewer: false,
+             },
+              null
+           );
+          }),
+          t.insertBefore(e, t.firstChild);
+         })();
+        </script>
+    </body>
+</html>
